updated nav, added blog loop

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name : In the Cave
 brand : In the Cave
 description : Philosophy!
 keyword: 
-url : http://inthecave.github.io/foundation
+url : http://inthecave.github.io/foundation/
 email : schultzbergin@gmail.com
 twitter : immarcussb
 github : inthecave
